--- a/templates/index.html
+++ b/templates/index.html
@@ -2,29 +2,38 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>LunaPath - Navegador</title>
-  <script src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
+  <title>LunaPath - Navegador Estilo Google Maps</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
-  <h2>🌐 LunaPath - Mapa Interativo</h2>
+  <header>
+    <h2>🌐 LunaPath - Roteamento Inteligente</h2>
+  </header>
 
-  <label>Quantidade de Locais:
-    <input type="number" id="pontos" min="2" value="5">
-  </label>
-  <button onclick="gerarMapa()">Gerar Mapa</button>
+  <div class="container">
+    <label>Quantidade de Locais:
+      <input type="number" id="pontos" min="2" value="5">
+    </label>
+    <button onclick="gerarMapa()">Gerar Mapa</button>
 
-  <br><br>
-  <label>Origem:
-    <input type="text" id="origem">
-  </label>
-  <label>Destino:
-    <input type="text" id="destino">
-  </label>
-  <button onclick="calcularRota()">Calcular Rota</button>
+    <br><br>
 
-  <div id="graph" style="width: 100%; height: 600px; border: 1px solid #ccc;"></div>
+    <label>Origem:
+      <select id="origem"></select>
+    </label>
 
-  <script src="/static/js/graph.js"></script>
+    <label>Destino:
+      <select id="destino"></select>
+    </label>
+
+    <button onclick="calcularRota()">Calcular Rota</button>
+
+    <div id="mapa"></div>
+  </div>
+
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="/static/js/map.js"></script>
+  <script>initMapa();</script>
 </body>
 </html>
